# engine

./: .clang-format  .gitignore  CMakeLists.txt  DOCS.md  Makefile  README.md  SOURCE_SNAPSHOT  engine  flake.nix  hl-engine.pc.in  test.db
.github/workflows/: _engine-tests.yml  ci.yml  linux.yml  mac.yml  publish.yml  release.yml
cmake/: AssertExecutables.cmake  Codesign.cmake  ExpectExit.cmake  Format.cmake  GuestFixtures.cmake  PackageTest.cmake  Phase2Production.cmake  Phase3Compat.cmake  Phase3Gates.cmake  Phase3Units.cmake  Phase4Install.cmake  Phase4Mac.cmake  RunSequence.cmake
cmake/toolchains/: aarch64-linux.cmake  macos-remote.cmake  x86_64-linux.cmake
cross/: aarch64-linux.cmake  macos-remote.cmake  x86_64-linux.cmake
docs/: ARCHITECTURE.md  CAP.md  MIGRATION.md  PROVIDER_MEMORY_MAPPING.md  PROVIDER_TRANSPORT.md  RUST_PACKAGE_ARCHITECTURE.md  arch.md  checkpoint-restore-io.md  checkpoint-sink.md  ci-green.md  compat-findings.md  makefile-retirement.md  memory.md  mig.md  perf-simd-findings.md  perf-sqlite-findings.md
include/hl/: activation.h  base.h  checkpoint_stream.h  codegen.h  config.h  engine.h  fake.h  fake_host.h  host_linux.h  host_macos.h  host_services.h  ir.h  linux.h  linux_abi.h  log.h  network.h
packaging/embedded/: README.md
pkgs/: Cargo.toml  README.md
pkgs/api/: Cargo.toml
pkgs/api/src/: checkpoint.rs  control.rs  extension.rs  lib.rs  types.rs
pkgs/api/tests/: contracts.rs
pkgs/protocol/: Cargo.toml  README.md
pkgs/protocol/src/: frame.rs  lib.rs  service.rs
pkgs/provider/: Cargo.toml  README.md
pkgs/provider/src/: authority.rs  handle.rs  lib.rs  lifecycle.rs  memory.rs  namespace.rs
pkgs/runtime/: Cargo.toml  README.md
pkgs/runtime/src/: transport.rs
pkgs/rust/: Cargo.toml  README.md  build.rs
pkgs/rust-mongo-fix/: README.md
pkgs/rust-mongo-fix/src/: command.rs  container.rs  control.rs  domain.rs  result.rs  service.rs  spec.rs  terminal.rs  wire.rs
pkgs/rust-mongo-fix/testdata/: exec-denied-aarch64  exec-denied-x86_64  exit42-aarch64  exit42-x86_64  exit70-aarch64
pkgs/rust-mongo-fix/tests/: alpine.rs  control.rs  e2e.rs  network.rs  policy.rs  traits.rs
pkgs/rust/assets/: PROVENANCE.md
pkgs/rust/examples/: run.rs
pkgs/rust/src/: artifacts.rs  checkpoint_stream.rs  child.rs  command.rs  (+18 more)
src/core/: activation.c  bus.c  bus.h  checkpoint_channel.c  checkpoint_channel.h  cli.c  config.c  dispatch.c  engine.c  engine_backend.h  engine_result.h  environment.c  environment.h  fatal.c  fatal.h  host_services.c  launch.c  launch.h  lifecycle.c  log.c  options.c  options.h  profile.h  provider_client.c  provider_demux.c  provider_demux.h  provider_files.c  provider_files.h  provider_handles.c  provider_handles.h  provider_namespace.c  provider_namespace.h
src/host/: child.c  clock.c  clock.h  file.c  file.h  fork_wire.c  fork_wire.h  native_compat.h  native_context.h  private.c  process.h  range.c  range.h  resolve.c  resolve.h  sync.c  sync.h  system.h
src/linux_abi/: affinity.c  bus.h  checkpoint.c  checkpoint.h  ckpt_sink.h  ckpt_sink_dir.h  ckpt_sink_stream.h  ckpt_source.h  device.c  device.h  dns.c  dns.h  elf.c  encode.c  encode.h  epoll.c  epoll.h  errno.c  eventfd.c  fdcache.c  fdcache.h  fork.c  fork_codec.c  fork_codec.h  fork_wire.h  gpu.h  guest_stat.h  image.c  image.h  inotify.c  inotify.h  limits.c  limits.h  linux_abi.c  number.c  object.h  open_plan.c  open_plan.h  parse.h  pipe.c  (+16 more)
src/runner/: main.c
src/translator/: arena.c  cache.c  codegen.c  digest.h  emit.h  identity.c  identity.h  persist.c  persist.h  reloc.h
tests/compat/: README.md  ext_inventory.tsv  guest_inventory.tsv  legacy_rust_inventory.tsv  legacy_suite_inventory.tsv  live_hl_jit_registry.tsv
tests/e2e/: checkpoint_connected_socket.c  checkpoint_connecting_fallback.c  checkpoint_connecting_refusal.c  checkpoint_cycle.c  checkpoint_deleted.c  checkpoint_epoll.c  checkpoint_eventfd.c  checkpoint_inotify.c  checkpoint_io_recovery.c  checkpoint_memfd.c  checkpoint_missing_external.c  checkpoint_modified_external.c  checkpoint_pipe.c  checkpoint_signal_state.c  checkpoint_socket_state.c  checkpoint_socketpair.c  checkpoint_threads.c  checkpoint_timerfd.c  checkpoint_tree.c  clock_injected.c  dir_binding.c  dynamic_guest.c  fd_binding.c  guest_descendant.c  guest_domain.c  guest_exit.c  guest_external_term.c  guest_fault.c  guest_output.c  guest_spin.c  lifecycle.tsv  mac_gates.tsv  pty_binding.c  stdio_binding.c
tests/integration/: activation_objc_package.m  activation_package.c  bridge_jobserver.c  checkpoint_tree_runner.c  deny_icmp.c  package.c  provider_reexec.c  remote_supervisor.c
tests/perf/: combined_bench.c  ops.c  order_torture.c  resource.c  syscall.c  translate.c  x86_flag_sse_diff.c  x86_sse_ea_diff.c
tests/soak/: README.md  manifest.tsv  profiles.tsv  smc2.c
tests/unit/: counter.h  linux.c  macos.c  test.h  test_a64_asm.c  test_address.c  test_affinity.c  test_arena.c  test_avx.c  test_bus.c  test_child.c  test_ckptinoq.c  test_cli.c  test_clock.c  test_cmpxchg.c  test_codegen.c  test_config.c  test_cpuid.c  test_decoder.c  test_device.c  test_digest.c  test_directory.c  test_directory_services.c  test_dns_fork_macos.c  test_dns_objc_fork_macos.m  test_emit.c  test_engine.c  test_environment.c  test_epoll.c  test_errno.c  test_eventfd.c  test_eventfd_fork.c  test_fatal.c  test_fdcache.c  test_file.c  test_flags.c  test_fork_wire.c  test_glue.c  test_gmap.c  test_host_linux.c  (+73 more)
tools/: bench_runner.c  binding_e2e_runner.c  bridge_runner.c  check_crate_archives.sh  check_domains.c  compat_runner.c  config_e2e_runner.c  crate_archive_manifest.sh  dir_e2e_runner.c  dual_backend_e2e_runner.c  e2e_runner.c  fair_worker_wrapper.c  launch.h  lifecycle_e2e_runner.c  linux_matrix.c  linux_production_smoke.c  matrix_runner.c  perf_runner.c  pty_binding_e2e_runner.c  refresh_crate_archives.sh  remote_supervisor.c  rootfs_e2e_runner.c  stdio_e2e_runner.c
tools/bench/: README.md
tools/remote/: mac-ar  mac-cc  mac-codesign  mac-install_name_tool  mac-libtool  mac-lipo  mac-nm  mac-otool  mac-ranlib  mac-strip
(+3227 files in other folders)
